Remove tags to keep one Api
